[package]
name = "lb_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait="0.1"
# pingora = {  git = "https://github.com/cloudflare/pingora" , features = [ "lb" ] }
pingora = {  git = "https://github.com/reigadegr/pingora" , features = [ "lb" ] }
# sfv = "0.9.4"
[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
# sfv = "0.9.4"

[profile.dev]
debug = 0
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
incremental = true
